--- a/src/styles.css
+++ b/src/styles.css
@@ -1,34 +1,41 @@
-body {
-  display: grid;
-
-  place-items: center;
-  background-color: #ccc;
-}
+/* Container app */
 
 .container-app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
+  width: 529px;
   padding-top: 4px;
-  gap: 10px;
-  margin-top: 40px;
+  gap: 20px;
+  margin-top: 45px;
 
-  h1 {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
-    font-weight: 800;
-    font-size: 2.2rem;
+  .container-header {
+    width: 100%;
+    gap: 4px;
+
+    h1 {
+      font-weight: 800;
+      font-size: 2.6rem;
+      color: var(--white);
+    }
+
+    span {
+      color: var(--green);
+      font-size: 1.2rem;
+      font-weight: 500;
+    }
   }
 }
+
+/* Container do formulario */
 
 .container-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
-  background-color: #e6e6e6;
-  padding: 20px;
+  width: 100%;
+  background-color: transparent;
+
   border-radius: 5px;
 
   .container-pai {
@@ -40,18 +47,18 @@ body {
     .container-input {
       width: 100%;
       display: flex;
+      gap: 2px;
       flex-direction: column;
-      gap: 4px;
       position: relative;
 
       .label-form {
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
         font-weight: 600;
+        color: var(--white);
       }
 
       .checkbox {
         display: flex;
+
         gap: 5px;
       }
 
@@ -59,15 +66,22 @@ body {
         width: 100%;
         display: flex;
         border: none;
-        height: 35px;
-        padding-left: 6px;
-        border-radius: 5px;
+        height: 45px;
+        padding-left: 9px;
+        border-radius: 9px;
+        background-color: var(--bg-input);
+        color: var(--white);
+        font-size: 0.9rem;
+        &::placeholder {
+          color: var(--white);
+        }
+        &:focus {
+          outline: 1px solid var(--green);
+        }
       }
 
       .error-text {
-        color: red;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
+        color: #c12626;
         font-size: 0.8rem;
       }
 
@@ -84,11 +98,10 @@ body {
     margin-top: 30px;
     border: none;
     padding: 10px;
-    background-color: rgb(58, 176, 255);
+    background-color: var(--green);
     cursor: pointer;
     border-radius: 10px;
-    color: #fff;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--white);
     font-size: 1rem;
     font-weight: 500;
     transition: 0.5s;
@@ -96,6 +109,6 @@ body {
 
   .btn-submit:hover {
     transition: 0.5s;
-    background-color: rgb(22, 145, 228);
+    background-color: var(--green-hover);
   }
 }
