--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
   padding-top: 4px;
   gap: 20px;
 
-  @media (max-width:560px) {
+  @media (max-width: 560px) {
     padding: 0 15px 10px 15px;
   }
 
@@ -120,5 +120,67 @@
   .btn-submit:hover {
     transition: 0.5s;
     background-color: var(--green-hover);
+  }
+}
+
+/* pagina de agradecimento */
+
+.container-thanks {
+  width: 100%;
+  height: 100dvh;
+  display: grid;
+  place-items: center;
+
+  .content-thanks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+    button {
+      position: absolute;
+      top: 30px;
+      left: 20px;
+      border: none;
+      padding: 3px 9px;
+      background-color: var(--green);
+      color: var(--white);
+      font-size: 1rem;
+      font-weight: 600;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.4s;
+
+      &:hover {
+        background-color: var(--green-hover);
+        transition: 0.4s;
+      }
+    }
+
+    h1 {
+      font-size: 2.7rem;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      color: var(--white);
+      font-weight: 400;
+
+      span {
+        color: var(--green);
+        font-weight: 800;
+      }
+    }
+
+    h4 {
+      font-size: 1.2rem;
+      color: var(--white);
+    }
+
+    p {
+      color: var(--white);
+      font-weight: 300;
+    }
   }
 }
