--- a/src/styles.css
+++ b/src/styles.css
@@ -159,28 +159,45 @@
       }
     }
 
-    h1 {
-      font-size: 2.7rem;
+    .title {
       display: flex;
-      gap: 10px;
+      gap: 6px;
       align-items: center;
-      color: var(--white);
-      font-weight: 400;
+
+      @media (max-width: 630px) {
+        flex-direction: column;
+      }
+
+      h1 {
+        font-size: 2.5rem;
+
+        gap: 10px;
+        flex-wrap: wrap;
+        align-items: center;
+        color: var(--white);
+        font-weight: 400;
+      }
 
       span {
+        font-size: 3.1rem;
+
         color: var(--green);
-        font-weight: 800;
+        font-weight: 700;
       }
     }
 
     h4 {
       font-size: 1.2rem;
       color: var(--white);
+      text-align: center;
+      width: 100%;
     }
 
     p {
       color: var(--white);
       font-weight: 300;
+      width: 100%;
+      text-align: center;
     }
   }
 }
